5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1662_2969.log
== TEST (2019-04-15 14:16:26) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >=2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
	print(round(msg, 2))




-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:16:29) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >=2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
	print(round(msg, 2))




-- EXECUTION TIME:
0.13175
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:

-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:16:31) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >=2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
	print(round(msg, 2))




-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:16:39) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >=2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
	print(round(msg, 2))




-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:16:59) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >=2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
	print(round(msg, 2))




-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:17:41) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >=2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
	print(round(msg, 2))




-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:17:47) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >=2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
	print(round(msg, 2))




-- OUTPUT:
130.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:27:10) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >=2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:27:11) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >=2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
print(round(msg, 2))




-- EXECUTION TIME:
0.181043
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
3.0
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:28:47) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q = 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
   print(round(msg, 2))




-- ERROR:
File "XXXX", line 4
    if(q = 2):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:28:49) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q = 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
   print(round(msg, 2))




-- EXECUTION TIME:
0.235921
-- ERROR:
  File "/home/codebench/codes/1662/2969/main.py", line 4
    if(q = 2):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:28:50) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q = 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
   print(round(msg, 2))




-- ERROR:
File "XXXX", line 4
    if(q = 2):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:28:51) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q = 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
   print(round(msg, 2))




-- ERROR:
File "XXXX", line 4
    if(q = 2):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:28:54) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
   print(round(msg, 2))




-- ERROR:
File "XXXX", line 8
    print(round(msg, 2))
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:28:55) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
   print(round(msg, 2))




-- ERROR:
File "XXXX", line 8
    print(round(msg, 2))
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:28:57) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
   print(round(msg, 2))




-- ERROR:
File "XXXX", line 8
    print(round(msg, 2))
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:29:02) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
  print(round(msg, 2))




-- ERROR:
File "XXXX", line 8
    print(round(msg, 2))
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:29:05) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:29:07) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
print(round(msg, 2))




-- EXECUTION TIME:
0.152757
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
3.0
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:29:07) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:29:09) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
print(round(msg, 2))




-- EXECUTION TIME:
0.173052
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
3.0
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:30:03) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 
print(round(msg, 2))




-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:30:04) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 
print(round(msg, 2))




-- EXECUTION TIME:
0.132132
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
3.0
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:30:05) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 
print(round(msg, 2))




-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:30:06) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 
print(round(msg, 2))




-- EXECUTION TIME:
0.127702
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
3.0
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:30:40) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg = q *2 * (25/100)* q
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:30:42) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg = q *2 * (25/100)* q
else:
	msg = p1 + p2
print(round(msg, 2))




-- EXECUTION TIME:
0.178795
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
2.0
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
2.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:30:43) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg = q *2 * (25/100)* q
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:30:44) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg = q *2 * (25/100)* q
else:
	msg = p1 + p2
print(round(msg, 2))




-- EXECUTION TIME:
0.210535
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
2.0
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
2.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:30:44) 
-- CODE:
q = int(input("Qual a quantidade de jogos? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg = q *2 * (25/100)* q
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:32:08) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:32:10) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
print(round(msg, 2))




-- EXECUTION TIME:
0.209378
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
3.0
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:32:10) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:32:17) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q = 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
print(round(msg, 2))




-- ERROR:
File "XXXX", line 4
    if(q = 2):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:32:21) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q == 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:32:22) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q == 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
print(round(msg, 2))




-- EXECUTION TIME:
0.177365
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
3.0
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:32:23) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q == 2):
	msg = q + q * (25/100)* q
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:33:41) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 * (25/100)* p2
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
2512.52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:33:42) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 * (25/100)* p2
else:
	msg = p1 + p2
print(round(msg, 2))




-- EXECUTION TIME:
0.136801
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
2512.52
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
3615.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:33:48) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 + (25/100)* p2
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:33:49) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 + (25/100)* p2
else:
	msg = p1 + p2
print(round(msg, 2))




-- EXECUTION TIME:
0.158494
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
125.31
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
150.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:33:50) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 + (25/100)* p2
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:33:51) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 + (25/100)* p2
else:
	msg = p1 + p2
print(round(msg, 2))




-- EXECUTION TIME:
0.149308
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
125.31
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
150.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:34:06) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 + (25/100)* p2
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:34:12) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 + (25/100)* p2
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:34:37) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 + (25/100) * p2
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:35:11) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 + (25/100) * p2
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:35:19) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 + (25/100) * p2
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:35:20) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 + (25/100) * p2
else:
	msg = p1 + p2
print(round(msg, 2))




-- EXECUTION TIME:
0.152991
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
125.31
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
150.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:36:24) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 * (25/100) * p2
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
2512.52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:36:25) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 * (25/100) * p2
else:
	msg = p1 + p2
print(round(msg, 2))




-- EXECUTION TIME:
0.196794
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
2512.52
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
3615.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:36:26) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 * (25/100) * p2
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
2512.52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:36:56) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 + (25/100) * p2
else:
	msg = p1 + p2
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:37:56) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  q + p2 + (25/100) * p2
else:
	msg = q + p1 + p2
print(round(msg, 2))




-- OUTPUT:
127.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:38:07) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  q + p2 + (25/100) * p2
else:
	msg = q + p1 + p2
print(round(msg, 2))




-- EXECUTION TIME:
0.169848
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
127.31
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
152.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:38:49) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 + (25/100) * p2
else:
	msg =  q + p1
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:38:50) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 + (25/100) * p2
else:
	msg =  q + p1
print(round(msg, 2))




-- EXECUTION TIME:
0.136009
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
125.31
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
150.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:38:52) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 + (25/100) * p2
else:
	msg =  q + p1
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:39:07) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 + (25/100) * p2
else:
	msg =  q + p1
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:39:08) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  p2 + (25/100) * p2
else:
	msg =  q + p1
print(round(msg, 2))




-- EXECUTION TIME:
0.150567
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
125.31
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
150.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:39:14) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  q + p2 + (25/100) * p2
else:
	msg =  q + p1
print(round(msg, 2))




-- OUTPUT:
127.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:39:15) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  q + p2 + (25/100) * p2
else:
	msg =  q + p1
print(round(msg, 2))




-- EXECUTION TIME:
0.171961
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
127.31
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
152.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:39:16) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =  q + p2 + (25/100) * p2
else:
	msg =  q + p1
print(round(msg, 2))




-- OUTPUT:
127.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:39:34) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =   p2 + (25/100) * p2
else:
	msg =  p1
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:39:35) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =   p2 + (25/100) * p2
else:
	msg =  p1
print(round(msg, 2))




-- EXECUTION TIME:
0.128804
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
125.31
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
150.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:39:36) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =   p2 + (25/100) * p2
else:
	msg =  p1
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:39:37) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =   p2 + (25/100) * p2
else:
	msg =  p1
print(round(msg, 2))




-- EXECUTION TIME:
0.126483
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
125.31
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:

-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
150.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:39:48) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =   p2 + (25/100) * p2
else:
	msg =  p1
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:39:59) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =   p2 + (25/100) * p2
else:
	msg =  p1
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:40:59) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =   p2 + (25/100) * p2
else:
	msg =  p1
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:42:05) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =   p2 + (25/100) * p2
else:
	msg =  p1
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:43:05) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2 = float(input("Qual o preco do segundo jogo? "))
if(q >= 2):
	msg =   p2 + (25/100) * p2
else:
	msg =  p1
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:45:06) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if(q >= 2):
	p2 = float(input("Qual o preco do segundo jogo"))
	msg =   p2 + (25/100) * p2
else:
	msg =  p1
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:45:07) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if(q >= 2):
	p2 = float(input("Qual o preco do segundo jogo"))
	msg =   p2 + (25/100) * p2
else:
	msg =  p1
print(round(msg, 2))




-- EXECUTION TIME:
0.203979
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
125.31
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
72.65
-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
150.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:45:08) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if(q >= 2):
	p2 = float(input("Qual o preco do segundo jogo"))
	msg =   p2 + (25/100) * p2
else:
	msg =  p1
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:45:22) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if(q >= 2):
	p2 = float(input("Qual o preco do segundo jogo?"))
	msg =   p2 + (25/100) * p2
else:
	msg =  p1
print(round(msg, 2))




-- OUTPUT:
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:45:23) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if(q >= 2):
	p2 = float(input("Qual o preco do segundo jogo?"))
	msg =   p2 + (25/100) * p2
else:
	msg =  p1
print(round(msg, 2))




-- EXECUTION TIME:
0.150602
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
125.31
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
72.65
-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
150.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:45:53) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if(q >= 2):
	p2 = float(input("Qual o preco do segundo jogo?"))
	msg =  p2 + (25/100) * p2
	print(p2)
else:
	msg =  p1
print(round(msg, 2))




-- OUTPUT:
100.25
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:45:56) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if(q >= 2):
	p2 = float(input("Qual o preco do segundo jogo?"))
	msg =  p2 + (25/100) * p2
	print(p2)
else:
	msg =  p1
print(round(msg, 2))




-- EXECUTION TIME:
0.178877
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
100.25
125.31
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
72.65
-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
120.25
150.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:45:58) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if(q >= 2):
	p2 = float(input("Qual o preco do segundo jogo?"))
	msg =  p2 + (25/100) * p2
print(p2)
else:
	msg =  p1
print(round(msg, 2))




-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:45:59) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if(q >= 2):
	p2 = float(input("Qual o preco do segundo jogo?"))
	msg =  p2 + (25/100) * p2
print(p2)
else:
	msg =  p1
print(round(msg, 2))




-- EXECUTION TIME:
0.207555
-- ERROR:
  File "/home/codebench/codes/1662/2969/main.py", line 8
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:46:01) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if(q >= 2):
	p2 = float(input("Qual o preco do segundo jogo?"))
	msg =  p2 + (25/100) * p2
print(p2)
else:
	msg =  p1
print(round(msg, 2))




-- EXECUTION TIME:
0.23684
-- ERROR:
  File "/home/codebench/codes/1662/2969/main.py", line 8
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:46:02) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if(q >= 2):
	p2 = float(input("Qual o preco do segundo jogo?"))
	msg =  p2 + (25/100) * p2
print(p2)
else:
	msg =  p1
print(round(msg, 2))




-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:47:07) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if(q >= 2):
	p2 = float(input("Qual o preco do segundo jogo?"))
	msg =  p2 + (25/100) * p2
	print (round(p2, 2))
else:
	msg =  p1
print(round(msg, 2))




-- OUTPUT:
100.25
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:47:09) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if(q >= 2):
	p2 = float(input("Qual o preco do segundo jogo?"))
	msg =  p2 + (25/100) * p2
	print (round(p2, 2))
else:
	msg =  p1
print(round(msg, 2))




-- EXECUTION TIME:
0.125518
-- TEST CASE 1:
---- input:
2
55.50
100.25
---- correct output:
130.69
---- user output:
100.25
125.31
-- TEST CASE 2:
---- input:
1
72.65
---- correct output:
72.65
---- user output:
72.65
-- TEST CASE 3:
---- input:
2
99.99
120.25
---- correct output:
190.18
---- user output:
120.25
150.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:47:09) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if(q >= 2):
	p2 = float(input("Qual o preco do segundo jogo?"))
	msg =  p2 + (25/100) * p2
	print (round(p2, 2))
else:
	msg =  p1
print(round(msg, 2))




-- OUTPUT:
100.25
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:47:22) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if(q >= 2):
	p2 = float(input("Qual o preco do segundo jogo?"))
	msg =  p2 + (25/100) * p2
	print (round(p2, 2))
else:
	msg =  p1
print(round(msg, 2))




-- OUTPUT:
100.25
125.31
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:49:06) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))


	if =  p2 + (25/100) * p2:
	
else:
	msg =  p1
print(round(msg, 2))




-- ERROR:
File "XXXX", line 5
    if =  p2 + (25/100) * p2:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:49:08) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))


	if =  p2 + (25/100) * p2:
	
else:
	msg =  p1
print(round(msg, 2))




-- ERROR:
File "XXXX", line 5
    if =  p2 + (25/100) * p2:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:49:15) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if =  p2 + (25/100) * p2:
	
else:
	msg =  p1
print(round(msg, 2))




-- ERROR:
File "XXXX", line 4
    if =  p2 + (25/100) * p2:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:49:16) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if =  p2 + (25/100) * p2:
	
else:
	msg =  p1
print(round(msg, 2))




-- ERROR:
File "XXXX", line 4
    if =  p2 + (25/100) * p2:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:49:21) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if =  p2 + (25/100) * p2 :
	
else:
	msg =  p1
print(round(msg, 2))




-- ERROR:
File "XXXX", line 4
    if =  p2 + (25/100) * p2 :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:49:37) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if  (p2 + (25/100) * p2 :
	
else:
	msg =  p1
print(round(msg, 2))




-- ERROR:
File "XXXX", line 4
    if  (p2 + (25/100) * p2 :
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:49:48) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if  (p2 + (25/100) * p2 ):
	
else:
	msg =  p1
print(round(msg, 2))




-- ERROR:
File "XXXX", line 6
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:51:58) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if  (p2 + (25/100) * p2 ):
	print (round(p2 , 2)
	
	
else:
	msg =  p1
print(round(msg, 2))




-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:52:00) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if  (p2 + (25/100) * p2 ):
	print (round(p2 , 2)
	
	
else:
	msg =  p1
print(round(msg, 2))




-- EXECUTION TIME:
0.165281
-- ERROR:
  File "/home/codebench/codes/1662/2969/main.py", line 8
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:53:39) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if  (p2 + (25/100) * p2 ):
	print(round(p2))
else:
	msg =  p1
print(round(msg, 2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if  (p2 + (25/100) * p2 ):
NameError: name 'p2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:53:41) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if  (p2 + (25/100) * p2 ):
	print(round(p2))
else:
	msg =  p1
print(round(msg, 2))




-- EXECUTION TIME:
0.126115
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2969/main.py", line 4, in <module>
    if  (p2 + (25/100) * p2 ):
NameError: name 'p2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:53:45) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if  (p2 + (25/100) * p2 ):
	print(round(p2, 2))
else:
	msg =  p1
print(round(msg, 2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if  (p2 + (25/100) * p2 ):
NameError: name 'p2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:53:46) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if  (p2 + (25/100) * p2 ):
	print(round(p2, 2))
else:
	msg =  p1
print(round(msg, 2))




-- EXECUTION TIME:
0.200971
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2969/main.py", line 4, in <module>
    if  (p2 + (25/100) * p2 ):
NameError: name 'p2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:53:47) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if  (p2 + (25/100) * p2 ):
	print(round(p2, 2))
else:
	msg =  p1
print(round(msg, 2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if  (p2 + (25/100) * p2 ):
NameError: name 'p2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:54:00) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if (p2 + (25/100) * p2 ):
	print(round(p2, 2))
else:
	msg =  p1
print(round(msg, 2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (p2 + (25/100) * p2 ):
NameError: name 'p2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:54:29) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if (p2 + (25/100) * p2 ):
	print(round(p2))
else:
	msg =  p1
print(round(msg, 2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (p2 + (25/100) * p2 ):
NameError: name 'p2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:54:30) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if (p2 + (25/100) * p2 ):
	print(round(p2))
else:
	msg =  p1
print(round(msg, 2))




-- EXECUTION TIME:
0.130537
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2969/main.py", line 4, in <module>
    if (p2 + (25/100) * p2 ):
NameError: name 'p2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:54:31) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if (p2 + (25/100) * p2 ):
	print(round(p2))
else:
	msg =  p1
print(round(msg, 2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (p2 + (25/100) * p2 ):
NameError: name 'p2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:54:31) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if (p2 + (25/100) * p2 ):
	print(round(p2))
else:
	msg =  p1
print(round(msg, 2))




-- EXECUTION TIME:
0.127954
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2969/main.py", line 4, in <module>
    if (p2 + (25/100) * p2 ):
NameError: name 'p2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:54:36) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if (p2 + (25/100) * p2 ):
	print(round(p2))
else:
	msg =  p1
print(round(msg, 2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (p2 + (25/100) * p2 ):
NameError: name 'p2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:54:37) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))

if (p2 + (25/100) * p2 ):
	print(round(p2))
else:
	msg =  p1
print(round(msg, 2))




-- EXECUTION TIME:
0.128442
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2969/main.py", line 4, in <module>
    if (p2 + (25/100) * p2 ):
NameError: name 'p2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:54:47) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2
if (p2 + (25/100) * p2 ):
	print(round(p2))
else:
	msg =  p1
print(round(msg, 2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    p2
NameError: name 'p2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:54:48) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2
if (p2 + (25/100) * p2 ):
	print(round(p2))
else:
	msg =  p1
print(round(msg, 2))




-- EXECUTION TIME:
0.122604
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2969/main.py", line 3, in <module>
    p2
NameError: name 'p2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:54:49) 
-- CODE:
q = int(input("Qual a quantidade de jogos 1 ou 2? "))
p1 = float(input("Qual o preco do primeiro jogo? "))
p2
if (p2 + (25/100) * p2 ):
	print(round(p2))
else:
	msg =  p1
print(round(msg, 2))




-- EXECUTION TIME:
0.118203
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2969/main.py", line 3, in <module>
    p2
NameError: name 'p2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
